# bike-system

./: .gitignore  README.md  bugs.txt  notite-sedinte.txt  platformio.ini  sfaturi-cv.txt
bike-calculator/include/: FSInteraction.h  bikeCalc.h  displayTask.h  generalUtility.h  hardwareUtility.h  menu.h  myTasks.h  signsMatrix.h
bike-calculator/src/: FSInteraction.cpp  bikeCalc.cpp  displayTask.cpp  hardwareUtility.cpp  hardwareUtility.h  (+4 more)
data-handling/: constants.py  data-handling.py  dataHandling.ipynb  data_operations.py  data_printing.py  general_purpose.py  main.py
detect-signs/: detect_give_way.py  downscale_folder.sh  utility.py  visualisation.py
detect-signs/c++/: CMakeCache.txt  CMakeLists.txt  DisplayImage  DisplayImage.cpp  Makefile  cmake_install.cmake  constants.h  detect_signs.cpp  detect_signs.h  main_detect  main_detect.cpp  memory_pool_list.cpp  memory_pool_list.h  old_detect_signs.cpp  test_main.cpp  utility.cpp  utility.h
detect-signs/c++/include/: constants.h  detect_signs.h  find_signs_in_chunk.h  memory_pool_list.h  old_detect_signs.h  template_match_signs.h  utility.h
detect-signs/c++/src/: detect_signs.cpp  find_signs_in_chunk.cpp  main_detect.cpp  old_detect_signs.cpp  template_match_signs.cpp  utility.cpp
detect-signs/c++/templates/: png-to-mask.py
detect-signs/c++/test/: CMakeCache.txt  DisplayImage  DisplayImage.cpp  Makefile  cmake_install.cmake
documents/: cerinte-oct.txt  concurrency-in-bike-sys.odp
media/: acceleration-velocity-plot
src/: FSInteraction.cpp  FSInteraction.h  bikeCalc.cpp  bikeCalc.h  displayTask.cpp  displayTask.h  generalUtility.h  hardwareUtility.cpp  hardwareUtility.h  main.cpp  menu.cpp  menu.h  myTasks.cpp  myTasks.h  numbersFont.h  stampsFont.h
(+2887 files in other folders)
